--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "swiper": "^11.1.10",
-    "postinstall": "react-flagpack"
+    // "postinstall": "react-flagpack"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
